--- a/white-plus/index.html
+++ b/white-plus/index.html
@@ -36,7 +36,7 @@
         <h1 class="conteudo-texto">
             Assine agora e tenha acesso a mais de 2.000 conteúdos e canais premium por apenas <span class="destaque">R$19,90/mês</span>.
         </h1>
-        <a href="#" class="botao-assinar">ASSINAR AGORA</a>
+        <a href="https://pay.kirvano.com/ba4c4af3-4b87-4197-9f93-e6d430a790ec" class="botao-assinar">ASSINAR AGORA</a>
         <p class="representacao-texto-conteudo">
             👉 Tenha todos os conteúdos da Netflix, Disney+, Globoplay, HBO Max e Premiere em qualquer tela — TV ou celular — sem limites!
         </p>
@@ -45,7 +45,7 @@
             <strong>COMBO COMPLETO</strong>
         </p>
         <a class="representacao-botao" href="#">Assine por 19,90 mensal</a>
-        <a class="representacao-botao-white" href="#">Assine somente com a White Plus+</a>
+        <a class="representacao-botao-white" href="https://pay.kirvano.com/ba4c4af3-4b87-4197-9f93-e6d430a790ec">Assine somente com a White Plus+</a>
         <p class="apresentacao-texto-texto">
             *O preço pode variar caso a assinatura seja feita em outro plano.
         </p>
@@ -82,7 +82,7 @@
                     <p>✅ Programação adultos (opcional)</p>
                     <p>✅ Pacotes Filmes e Série</p>
                 </div>
-                <button class="botao-plano">QUERO ESSE</button>
+                <a class="botao-plano" href="https://pay.kirvano.com/ba4c4af3-4b87-4197-9f93-e6d430a790ec" target="_blank" rel="noopener">QUERO ESSE</a>
                 <p class="promocionais">
                     Valores promocionais por tempo ilimitado.<br>
                     Cancele quando quiser.
@@ -107,7 +107,7 @@
                     <p>✅ Programação adultos (opcional)</p>
                     <p>✅ Pacotes Filmes e Série</p>
                 </div>
-                <button class="botao-plano">QUERO ESSE</button>
+                   <a class="botao-plano" href="https://pay.kirvano.com/0f9ef80e-1eee-4bce-8985-913884f9f690" target="_blank" rel="noopener">QUERO ESSE</a>            
                 <p class="promocionais">
                     Valores promocionais por tempo ilimitado.<br>
                     Cancele quando quiser.
@@ -132,7 +132,7 @@
                     <p>✅ Programação adultos (opcional)</p>
                     <p>✅ Pacotes Filmes e Série</p>
                 </div>
-                <button class="botao-plano">QUERO ESSE</button>
+                <a class="botao-plano" href="https://pay.kirvano.com/38892243-8e22-406f-aaab-6018a155b79a" target="_blank" rel="noopener">QUERO ESSE</a> 
                 <p class="promocionais">
                     Valores promocionais por tempo ilimitado.<br>
                     Cancele quando quiser.
@@ -158,12 +158,12 @@
                     <p>✅ Programação adultos (opcional)</p>
                     <p>✅ Pacotes Filmes e Série</p>
                 </div>
-                <button class="botao-plano destaque-anual">QUERO ESSE</button>
+                 <a class="botao-plano" href="https://pay.kirvano.com/64237e77-ad93-4de0-a29d-211b7ae09b3f" target="_blank" rel="noopener">QUERO ESSE</a> 
                 <p class="promocionais">
                     Valores promocionais por tempo ilimitado.<br>
                     Cancele quando quiser.
                 </p>
-            </div>
+            </div>                      
         </div>
     </section>
 
