--- a/white-plus/index.html
+++ b/white-plus/index.html
@@ -44,7 +44,7 @@
             White <span class="representacao-plus">Plus +</span><br>
             <strong>COMBO COMPLETO</strong>
         </p>
-        <a class="representacao-botao" href="#">Assine por 19,90 mensal</a>
+        <a class="representacao-botao" href="ttps://pay.kirvano.com/ba4c4af3-4b87-4197-9f93-e6d430a790ec"">Assine por 19,90 mensal</a>
         <a class="representacao-botao-white" href="https://pay.kirvano.com/ba4c4af3-4b87-4197-9f93-e6d430a790ec">Assine somente com a White Plus+</a>
         <p class="apresentacao-texto-texto">
             *O preço pode variar caso a assinatura seja feita em outro plano.
