--- a/white-plus/index.html
+++ b/white-plus/index.html
@@ -209,7 +209,7 @@
                 <div>
                     <div class="suporte-titulo">WhatsApp</div>
                     <div class="suporte-resposta">Resposta em 5 minutos</div>
-                    <a class="suporte-botao" href="https://wa.me/11982542740" target="_blank">Falar no WhatsApp</a>
+                    <a class="suporte-botao" href="https://wa.me/55(11)982542740" target="_blank">Falar no WhatsApp</a>
                 </div>
             </div>
         </div>
