--- a/white-plus/index.html
+++ b/white-plus/index.html
@@ -30,8 +30,8 @@
     <!-- HERO -->
     <section class="container-primario">
         <div class="imagens-apresentacao imagens-grandes">
-            <img class="apresentacao-imagem" src="img/logo.webp" alt="logo-fundo">
-            <img class="apresentacao-imagem-tv" src="img/logo-imagem.png" alt="logo-tv">
+            <img class="apresentacao-imagem" src="img/strim.jpg" alt="logo-fundo">
+            <img class="apresentacao-imagem-tv" src="img/strimer.png" alt="logo-tv">
         </div>
         <h1 class="conteudo-texto">
             Assine agora e tenha acesso a mais de 2.000 conteúdos e canais premium por apenas <span class="destaque">R$19,90/mês</span>.
