--- a/white-plus/index.html
+++ b/white-plus/index.html
@@ -26,6 +26,11 @@
             </nav>
         </div>
     </header>
+    <section>
+        <div class="barra-topo">
+            <p>🔥 Promoção de lançamento: Assine agora por apenas R$19,90/mês! 🔥</p>
+        </div>
+    </section>
 
     <!-- HERO -->
     <section class="container-primario">
@@ -71,17 +76,17 @@
                 </p>
                 <div class="valor">R$ 19,90*</div>
                 <div class="mes">por mês</div>
-                <div class="pl-mensal">
-                    <p>✅ Use 1 tela simultaneamente</p>
-                    <p>✅ Mais de 60.000 conteúdos</p>
-                    <p>✅ Qualidade SD/HD/FHD/4K</p>
-                    <p>✅ Guia de programação [EPG]</p>
-                    <p>✅ Assista no Smartphone/tablet</p>
-                    <p>✅ Assista na Smart TV</p>
-                    <p>✅ Assista no computador</p>
-                    <p>✅ Programação adultos (opcional)</p>
-                    <p>✅ Pacotes Filmes e Série</p>
-                </div>
+                <ul class="plano-lista">
+                    <li>✅ Use 1 tela simultaneamente</li>
+                   <li>✅ Mais de 60.000 conteúdos</li>
+                    <li>✅ Qualidade SD/HD/FHD/4K</li>
+                    <li>✅ Guia de programação [EPG]</li>
+                    <li>✅ Assista no Smartphone/tablet</li>
+                    <li>✅ Assista na Smart TV</li>
+                   <li>✅ Assista no computador</li>
+                    <li>✅ Programação adultos (opcional)</li>
+                   <li>✅ Pacotes Filmes e Série</li>
+                </ul>
                 <a class="botao-plano" href="https://pay.kirvano.com/ba4c4af3-4b87-4197-9f93-e6d430a790ec" target="_blank" rel="noopener">QUERO ESSE</a>
                 <p class="promocionais">
                     Valores promocionais por tempo ilimitado.<br>
@@ -92,21 +97,21 @@
             <div class="bloco-todo bloco-tri">
                 <h2 class="plano-titulo">PLANO TRIMESTRAL</h2>
                 <p class="plano-desc">
-                    Perfeito para você que quer economizar um pouco <br> e ainda ter acesso à melhor programação da internet!
+                    Perfeito para você que quer economizar um pouco  e ainda ter acesso à melhor programação da internet!
                 </p>
                 <div class="valor">R$ 75,90</div>
                 <div class="mes">por 3 meses</div>
-                <div class="plano-lista">
-                    <p>✅ Use 1 tela simultaneamente</p>
-                    <p>✅ Mais de 60.000 conteúdos</p>
-                    <p>✅ Qualidade SD/HD/FHD/4K</p>
-                    <p>✅ Guia de programação [EPG]</p>
-                    <p>✅ Assista no Smartphone/tablet</p>
-                    <p>✅ Assista na Smart TV</p>
-                    <p>✅ Assista no computador</p>
-                    <p>✅ Programação adultos (opcional)</p>
-                    <p>✅ Pacotes Filmes e Série</p>
-                </div>
+                <ul class="plano-lista">
+                    <li>✅ Use 1 tela simultaneamente</li>
+                    <li>✅ Mais de 60.000 conteúdos</li>
+                    <li>✅ Qualidade SD/HD/FHD/4K</li>
+                    <li>✅ Guia de programação [EPG]</li>
+                    <li>✅ Assista no Smartphone/tablet</li>
+                    <li>✅ Assista na Smart TV</li>
+                    <li>✅ Assista no computador</li>
+                    <li>✅ Programação adultos (opcional)</li>
+                    <li>✅ Pacotes Filmes e Série</li>
+                </ul>
                    <a class="botao-plano" href="https://pay.kirvano.com/0f9ef80e-1eee-4bce-8985-913884f9f690" target="_blank" rel="noopener">QUERO ESSE</a>            
                 <p class="promocionais">
                     Valores promocionais por tempo ilimitado.<br>
@@ -121,17 +126,17 @@
                 </p>
                 <div class="valor">R$ 123,90</div>
                 <div class="mes">por 6 meses</div>
-                <div class="plano-lista">
-                    <p>✅ Use 1 tela simultaneamente</p>
-                    <p>✅ Mais de 60.000 conteúdos</p>
-                    <p>✅ Qualidade SD/HD/FHD/4K</p>
-                    <p>✅ Guia de programação [EPG]</p>
-                    <p>✅ Assista no Smartphone/tablet</p>
-                    <p>✅ Assista na Smart TV</p>
-                    <p>✅ Assista no computador</p>
-                    <p>✅ Programação adultos (opcional)</p>
-                    <p>✅ Pacotes Filmes e Série</p>
-                </div>
+                <ul class="plano-lista">
+                    <li>✅ Use 1 tela simultaneamente</li>
+                    <li>✅ Mais de 60.000 conteúdos</li>
+                    <li>✅ Qualidade SD/HD/FHD/4K</li>
+                    <li>✅ Guia de programação [EPG]</li>
+                    <li>✅ Assista no Smartphone/tablet</li>
+                    <li>✅ Assista na Smart TV</li>
+                    <li>✅ Assista no computador</li>
+                    <li>✅ Programação adultos (opcional)</li>
+                    <li>✅ Pacotes Filmes e Série</li>
+                </ul>
                 <a class="botao-plano" href="https://pay.kirvano.com/38892243-8e22-406f-aaab-6018a155b79a" target="_blank" rel="noopener">QUERO ESSE</a> 
                 <p class="promocionais">
                     Valores promocionais por tempo ilimitado.<br>
@@ -147,17 +152,17 @@
                 </p>
                 <div class="valor">R$ 249,90</div>
                 <div class="mes">por 12 meses</div>
-                <div class="plano-lista">
-                    <p>✅ Use 1 tela simultaneamente</p>
-                    <p>✅ Mais de 60.000 conteúdos</p>
-                    <p>✅ Qualidade SD/HD/FHD/4K</p>
-                    <p>✅ Guia de programação [EPG]</p>
-                    <p>✅ Assista no Smartphone/tablet</p>
-                    <p>✅ Assista na Smart TV</p>
-                    <p>✅ Assista no computador</p>
-                    <p>✅ Programação adultos (opcional)</p>
-                    <p>✅ Pacotes Filmes e Série</p>
-                </div>
+                <ul class="plano-lista">
+                    <li>✅ Use 1 tela simultaneamente</li>
+                    <li>✅ Mais de 60.000 conteúdos</li>
+                    <li>✅ Qualidade SD/HD/FHD/4K</li>
+                    <li>✅ Guia de programação [EPG]</li>
+                    <li>✅ Assista no Smartphone/tablet</li>
+                    <li>✅ Assista na Smart TV</li>
+                    <li>✅ Assista no computador</li>
+                    <li>✅ Programação adultos (opcional)</li>
+                    <li>✅ Pacotes Filmes e Série</li>
+                </ul>
                  <a class="botao-plano" href="https://pay.kirvano.com/64237e77-ad93-4de0-a29d-211b7ae09b3f" target="_blank" rel="noopener">QUERO ESSE</a> 
                 <p class="promocionais">
                     Valores promocionais por tempo ilimitado.<br>
