--- a/white-plus/index.html
+++ b/white-plus/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="header-container">
             <div class="header-logo">
-                <img src="img/logo.webp" alt="White Plus" />
+                <img src="img/logo.png" alt="White Plus" />
                 <span>White Plus</span>
             </div>
             <nav class="header-nav">
