--- a/white-plus/index.html
+++ b/white-plus/index.html
@@ -224,7 +224,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-logo">
-                <img src="img/logo.webp" alt="White Plus" />
+                <img src="img/logo.png" alt="White Plus" />
                 <span>White Plus</span>
             </div>
             <nav class="footer-nav">
